[package]
name = "cargo-update"
description = "A cargo subcommand for checking and applying updates to installed executables"
documentation = "https://rawcdn.githack.com/nabijaczleweli/cargo-update/doc/cargo_update/index.html"
repository = "https://github.com/nabijaczleweli/cargo-update"
readme = "README.md"
keywords = ["cargo", "update", "plugin", "subcommand"]
categories = ["development-tools::cargo-plugins"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "10.0.1"
# Remember to also update in man/*.md
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>",
           "Yann Simon <yann.simon.fr@gmail.com>",
           "ven <vendethiel@hotmail.fr>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>",
           "Liigo <liigo@qq.com>",
           "azyobuzin <azyobuzin@users.sourceforge.jp>",
           "Tatsuyuki Ishi <ishitatsuyuki@gmail.com>",
           "Tom Prince <tom.prince@twistedmatrix.com>",
           "Mateusz Mikuła <mati865@gmail.com>",
           "sinkuu <sinkuupump@gmail.com>",
           "Alex Burka <aburka@seas.upenn.edu>",
           "Matthias Krüger <matthias.krueger@famsik.de>",
           "Daniel Holbert <dholbert@cs.stanford.edu>",
           "Jonas Bushart <jonas@bushart.org>",
           "Harrison Metzger <harrisonmetz@gmail.com>",
           "Benjamin Bannier <bbannier@gmail.com>",
           "Dimitris Apostolou <dimitris.apostolou@icloud.com>",
           "Corbin Uselton <corbinu@decimal.io>",
           "QuarticCat <QuarticCat@protonmail.com>",
           "Artur Sinila <freesoftware@logarithmus.dev>",
           "qthree <qthree3@gmail.com>",
           "Marcin Puc <tranzystorek.io@protonmail.com>",
           "Paul Barker <paul@pbarker.dev>"]
exclude = ["*.enc"]


# Note: don't bump dependencies unless necessary to keep building on old rustc versions
[dependencies]
serde_derive = "1.0"
lazy_static = "1.4"
array_tool = "1.0"
tabwriter = "1.2"
lazysort = "0.2"
regex = "1.6"
serde = "1.0"
git2 = "0.15"
dirs = "4.0"
json = "0.12"
toml = "0.5"
hex = "0.4"
url = "2.3"

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.clap]
version = "=2.33.3"
features = ["wrap_help"]

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]  # Matches https://github.com/rust-lang/git2-rs/blob/0.13.25/Cargo.toml
# https://app.travis-ci.com/github/nabijaczleweli/cargo-update/jobs/548138871#L272 vs https://app.travis-ci.com/github/nabijaczleweli/cargo-update/jobs/550595562#L279
openssl-sys = "=0.9.70"

[build-dependencies]
embed-resource = "1.7"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]

[[bin]]
name = "cargo-install-update"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "cargo-install-update-config"
path = "src/main-config.rs"
test = false
doc = false
