[package]
name = "cargo-update"
description = "A cargo subcommand for checking and applying updates to installed executables"
documentation = "https://rawcdn.githack.com/nabijaczleweli/cargo-update/doc/cargo_update/index.html"
repository = "https://github.com/nabijaczleweli/cargo-update"
readme = "README.md"
keywords = ["cargo", "update", "plugin", "subcommand"]
categories = ["development-tools::cargo-plugins"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "13.0.4"
# Remember to also update in man/*.md
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>",
           "Yann Simon <yann.simon.fr@gmail.com>",
           "ven <vendethiel@hotmail.fr>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>",
           "Liigo <liigo@qq.com>",
           "azyobuzin <azyobuzin@users.sourceforge.jp>",
           "Tatsuyuki Ishi <ishitatsuyuki@gmail.com>",
           "Tom Prince <tom.prince@twistedmatrix.com>",
           "Mateusz Mikuła <mati865@gmail.com>",
           "sinkuu <sinkuupump@gmail.com>",
           "Alex Burka <aburka@seas.upenn.edu>",
           "Matthias Krüger <matthias.krueger@famsik.de>",
           "Daniel Holbert <dholbert@cs.stanford.edu>",
           "Jonas Bushart <jonas@bushart.org>",
           "Harrison Metzger <harrisonmetz@gmail.com>",
           "Benjamin Bannier <bbannier@gmail.com>",
           "Dimitris Apostolou <dimitris.apostolou@icloud.com>",
           "Corbin Uselton <corbinu@decimal.io>",
           "QuarticCat <QuarticCat@protonmail.com>",
           "Artur Sinila <freesoftware@logarithmus.dev>",
           "qthree <qthree3@gmail.com>",
           "Marcin Puc <tranzystorek.io@protonmail.com>",
           "Paul Barker <paul@pbarker.dev>",
           "Benoît CORTIER <bcortier@proton.me>",
           "Biswapriyo Nath <nathbappai@gmail.com>",
           "Shiraz <smcclennon@protonmail.com>",
           "Victor Song <vms2@rice.edu>",
           "chrisalcantara <chris@chrisalcantara.com>",
           "Utkarsh Gupta <utkarshgupta137@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
json-deserializer = "0.4"
serde_derive = "1.0"
array_tool = "1.0"
once_cell = "1.17"
tabwriter = "1.2"
lazysort = "0.2"
regex = "1.6"
serde = "1.0"
git2 = "0.18"
home = "0.5"
toml = "0.5"
hex = "0.4"
url = "2.3"

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.clap]
version = "3.2"
features = ["cargo", "env", "wrap_help"]

[dependencies.curl]
version = "0.4"
features = ["http2"]

[build-dependencies]
embed-resource = "1.7"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl", "curl/static-ssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-libcurl = ["curl/static-curl"]

[[bin]]
name = "cargo-install-update"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "cargo-install-update-config"
path = "src/main-config.rs"
test = false
doc = false
