[package]
name = "cargo-update"
description = "A cargo subcommand for checking and applying updates to installed executables"
repository = "https://github.com/nabijaczleweli/cargo-update"
readme = "README.md"
keywords = ["cargo", "update", "plugin", "subcommand"]
categories = ["development-tools::cargo-plugins"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "20.0.0"
exclude = ["*.enc"]
edition = '2015'
rust-version = "1.71.1"


[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
jobserver = "0.1"
tabwriter = "1.2"
whoami = "1.5"
serde = "1.0"
git2 = "0.20"
home = "=0.5.9"
toml = "0.8"
hex = "0.4"
url = "2.3"

[target.'cfg(target_vendor = "apple")'.dependencies.security-framework]
version = "3.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
default-features = false
features = ["Win32_Security_Credentials"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["now"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.clap]
version = "3.2"
features = ["cargo", "env", "wrap_help"]

[dependencies.curl]
version = "0.4"
features = ["http2"]

[target.'cfg(all(unix, not(target_vendor = "apple")))'.dependencies.libc]
version = "0.2"

[build-dependencies]
embed-resource = "2.4"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl", "curl/static-ssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-libcurl = ["curl/static-curl"]

[[bin]]
name = "cargo-install-update"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "cargo-install-update-config"
path = "src/main-config.rs"
test = false
doc = false
